Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 <p>原文网址:<a href="http://www.catb.org/~esr/faqs/smart-questions.html" title="原文网址">http://www.catb.org/~esr/faqs/smart-questions.html</a></p>
 
 <h1>
+<a id="提问的智慧-1" class="anchor" href="#%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>提问的智慧</h1>
+
+<p><b>How To Ask Questions The Smart Way（MCBar Edition）</b></p>
+
+<p>原指南英文版版权为Eric S. Raymond, Rick Moen 所有。</p>
+
+<p>如果你想复制、镜像、翻译或引用本文，请参阅<a href="http://www.catb.org/~esr/copying.html" title="复制协议">复制协议</a>。</p>
+
+<p>原文网址:<a href="http://www.catb.org/~esr/faqs/smart-questions.html" title="原文网址">http://www.catb.org/~esr/faqs/smart-questions.html</a></p>
+
+<h1>
 <a id="声明" class="anchor" href="#%E5%A3%B0%E6%98%8E" aria-hidden="true"><span class="octicon octicon-link"></span></a>声明</h1>
 
 <p>我们明白您可能是因为需要某些协助而正在阅读这本指南，而有些人却认为我们我们既然发布了此指南，我们则有责任解决所有的技术问题。</p>
@@ -71,7 +82,8 @@
 <h1>
 <a id="提问时" class="anchor" href="#%E6%8F%90%E9%97%AE%E6%97%B6" aria-hidden="true"><span class="octicon octicon-link"></span></a>提问时</h1>
 
-<p><b>使用有意义且明确的主题</b></p>
+<h2>
+<a id="使用有意义且明确的主题" class="anchor" href="#%E4%BD%BF%E7%94%A8%E6%9C%89%E6%84%8F%E4%B9%89%E4%B8%94%E6%98%8E%E7%A1%AE%E7%9A%84%E4%B8%BB%E9%A2%98" aria-hidden="true"><span class="octicon octicon-link"></span></a>使用有意义且明确的主题</h2>
 
 <p>主题是你在较少的字以内吸引有能力解答您问题的人的注意的黄金机会，不要用诸如 “请帮我” （更别提大写的 “请帮我！！！！”，这种主题的消息会被条件反射式地删掉）之类的唠叨浪费机会。不要用你痛苦的深度来打动我们，相反，要在这点空间中使用超级简明扼要的问题描述。</p>
 
@@ -87,16 +99,16 @@
 
 <p>大抵如此，请将出现问题时的情况与关键配置、设定以简洁的语言进行描述并用作标题，这将使您受益匪浅。</p>
 
-<h1>
-<a id="用清晰语法拼写正确的语句书写与名称标准化" class="anchor" href="#%E7%94%A8%E6%B8%85%E6%99%B0%E8%AF%AD%E6%B3%95%E6%8B%BC%E5%86%99%E6%AD%A3%E7%A1%AE%E7%9A%84%E8%AF%AD%E5%8F%A5%E4%B9%A6%E5%86%99%E4%B8%8E%E5%90%8D%E7%A7%B0%E6%A0%87%E5%87%86%E5%8C%96" aria-hidden="true"><span class="octicon octicon-link"></span></a>用清晰、语法、拼写正确的语句书写与名称标准化</h1>
+<h2>
+<a id="用清晰语法拼写正确的语句书写与名称标准化" class="anchor" href="#%E7%94%A8%E6%B8%85%E6%99%B0%E8%AF%AD%E6%B3%95%E6%8B%BC%E5%86%99%E6%AD%A3%E7%A1%AE%E7%9A%84%E8%AF%AD%E5%8F%A5%E4%B9%A6%E5%86%99%E4%B8%8E%E5%90%8D%E7%A7%B0%E6%A0%87%E5%87%86%E5%8C%96" aria-hidden="true"><span class="octicon octicon-link"></span></a>用清晰、语法、拼写正确的语句书写与名称标准化</h2>
 
 <p>清楚、良好地表达你的问题非常重要。如果你觉得这样做麻烦，那么我们也认为解决你的问题更加麻烦。花点额外的精力斟酌一下字句，用不着太僵硬与正式，但它需要绝对的准确。</p>
 
 <p>汉字与标点符号您应当尽量做到正确。一般而言，如果你写得象个半文盲似的傻子，多半得不到理睬，甚至会得到他人的挖苦。
 </p><p>并且注意名称的标准化，这将帮助你的提问更加容易被理解。如果你不太确定一个东西如何表达，请参考Minecraftwiki上的<a href="http://minecraft-zh.gamepedia.com/Minecraft_Wiki:%E8%AF%91%E5%90%8D%E6%A0%87%E5%87%86%E5%8C%96" title="译名标准化页面">译名标准化页面</a>。</p>
 
-<h1>
-<a id="描述问题应准确且有内容" class="anchor" href="#%E6%8F%8F%E8%BF%B0%E9%97%AE%E9%A2%98%E5%BA%94%E5%87%86%E7%A1%AE%E4%B8%94%E6%9C%89%E5%86%85%E5%AE%B9" aria-hidden="true"><span class="octicon octicon-link"></span></a>描述问题应准确且有内容</h1>
+<h2>
+<a id="描述问题应准确且有内容" class="anchor" href="#%E6%8F%8F%E8%BF%B0%E9%97%AE%E9%A2%98%E5%BA%94%E5%87%86%E7%A1%AE%E4%B8%94%E6%9C%89%E5%86%85%E5%AE%B9" aria-hidden="true"><span class="octicon octicon-link"></span></a>描述问题应准确且有内容</h2>
 
 <ul>
 <li>  仔细、清楚地描述问题的症状</li>
@@ -106,6 +118,81 @@
 <li>  描述最近对计算机或Minecraft配置的任何相关改变。</li>
 <li>  如果可能，提供在可控环境下重现问题的方法。</li>
 </ul>
+
+<h2>
+<a id="描述目标而不是过程" class="anchor" href="#%E6%8F%8F%E8%BF%B0%E7%9B%AE%E6%A0%87%E8%80%8C%E4%B8%8D%E6%98%AF%E8%BF%87%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>描述目标而不是过程</h2>
+
+<p>如果你想弄清楚如何做某事，在开头就描述你的目标，然后才陈述你所遇到问题的特定步骤。</p>
+
+<p>寻求技术帮助的人在脑袋里有个更高层次的目标，他们在自以为能达到目标的特定道路上被卡住了，然后跑来问该怎么做，但没有意识到这条路本身有问题，结果要费很大的劲才能通过。</p>
+
+<p><b>愚蠢</b></p>
+
+<p>我该如何使用某工具复制指定区域的方块？</p>
+
+<p><b>明智</b></p>
+
+<p>我试图复制指定区域的方块，于是我找到了某工具，我按照该工具的说明进行操作，然而该工具似乎并不能正常运作。</p>
+
+<p>第二种提法是明智的，它使得关于直接使用clone命令的回答成为可能。</p>
+
+<h2>
+<a id="明白你想问什么" class="anchor" href="#%E6%98%8E%E7%99%BD%E4%BD%A0%E6%83%B3%E9%97%AE%E4%BB%80%E4%B9%88" aria-hidden="true"><span class="octicon octicon-link"></span></a>明白你想问什么</h2>
+
+<p>漫无边际的问题通常也被视为没有明确限制的时间无底洞。最有可能给你有用答案的人通常也是最忙的人，这些人对于没有止境的时间无底洞极其敏感，所以他们也倾向于讨厌那些漫无边际的问题。</p>
+
+<p>如果你明确了想让回复者做的事（如指点方向、发送文件或其它），你更有可能得到有用的回复。因为这样可以让他们集中精力并间接地设定了他们为帮助你需要花费的时间和精力上限，这一般更好。</p>
+
+<p>因此，优化问题的结构，尽量减少想帮助你的人解决它所需要的时间，会有很大的帮助。因此，问“请问可否指点一下哪里有好一点Minecraft地图制作器？”通常比问“你能通过程序快速地制作一幅还行的Minecraft地图吗？”更好。如果你的Minecraft不能工作，问问它有什么地方不对，比要求别人替你修改要明智得多。</p>
+
+<h2>
+<a id="去除无意义的疑问" class="anchor" href="#%E5%8E%BB%E9%99%A4%E6%97%A0%E6%84%8F%E4%B9%89%E7%9A%84%E7%96%91%E9%97%AE" aria-hidden="true"><span class="octicon octicon-link"></span></a>去除无意义的疑问</h2>
+
+<p>别用无意义的话结束提问，例如“有人能帮我吗？”或者“有答案吗？”。</p> <p>首先：如果你对问题的描述不很合适，这样问更是画蛇添足。其次，由于这样问是画蛇添足，部分有能力解决你回答的人会很厌烦你–而且他们可能会用逻辑上正确的回答来表示蔑视，例如：“没错，有人能帮你”或者“不，没答案 ”。</p>
+
+<h2>
+<a id="谦逊绝没有害处而且常帮大忙" class="anchor" href="#%E8%B0%A6%E9%80%8A%E7%BB%9D%E6%B2%A1%E6%9C%89%E5%AE%B3%E5%A4%84%E8%80%8C%E4%B8%94%E5%B8%B8%E5%B8%AE%E5%A4%A7%E5%BF%99" aria-hidden="true"><span class="octicon octicon-link"></span></a>谦逊绝没有害处，而且常帮大忙</h2>
+
+<p>彬彬有礼，多用“请”和“先道个谢了”。让大家都知道你对他们花费时间义务提供帮助心存感激。</p>
+
+<p>实话实说，虽然这不象合乎语法、清楚准确的描述等等那么重要（也不能用来替代它们）；我们一般更喜欢直接了当且技术上敏锐的提问，而不是彬彬有礼的废话（如果这让你迷惑不解，请记住，我们衡量一个问题价值的标准是：它能让我们学会多少）。</p>
+
+<p>然而，如果你有很多问题无法解决，礼貌将会增加你得到有用答案的机会。</p>
+
+<h2>
+<a id="问题解决后加个简短说明" class="anchor" href="#%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E5%90%8E%E5%8A%A0%E4%B8%AA%E7%AE%80%E7%9F%AD%E8%AF%B4%E6%98%8E" aria-hidden="true"><span class="octicon octicon-link"></span></a>问题解决后，加个简短说明</h2>
+
+<p>问题解决后，向所有帮助过你的人发个说明，让他们知道问题是怎样解决的，并再一次向他们表示感谢。</p>
+
+<p>补充说明不必很长或是很深入；简单的一句“你好，原来是网线出了问题！谢谢大家”比什么也不说要强。事实上，除非结论真的很有技术含量，否则简短可爱的小结比长篇学术论文更好。说明问题是怎样解决的，但大可不必将解决问题的过程复述一遍。</p>
+
+<h1>
+<a id="如何解读回答" class="anchor" href="#%E5%A6%82%E4%BD%95%E8%A7%A3%E8%AF%BB%E5%9B%9E%E7%AD%94" aria-hidden="true"><span class="octicon octicon-link"></span></a>如何解读回答</h1>
+
+<h2>
+<a id="qnmlgb读读置顶帖与qnmlgb不会查wiki吗" class="anchor" href="#qnmlgb%E8%AF%BB%E8%AF%BB%E7%BD%AE%E9%A1%B6%E5%B8%96%E4%B8%8Eqnmlgb%E4%B8%8D%E4%BC%9A%E6%9F%A5wiki%E5%90%97" aria-hidden="true"><span class="octicon octicon-link"></span></a>"QNMLGB读读置顶帖"与"QNMLGB不会查wiki吗？"</h2>
+
+<p>有一个古老而神圣的传统：如果你收到“QNMLGB读读置顶帖”的回复，发信人认为你应该去“读读置顶帖”。他或她多半是对的，去读一下吧。</p>
+
+<p>如果你收到“QNMLGB不会查wiki吗？”的回复，发信人认为你应该“查一下wiki”。那人多半也是对的，去查一下吧。</p>
+
+<p>当然"QNMLGB不会查查百度吗?"一般和上面两个范例是一样的意思。</p>
+
+<p>通常，叫你搜索的人已经打开了能解决你问题的帖子或网页，正在一边看一边敲键盘。这些回复意味着他认为：第一，你要的信息很容易找到。第二，自已找要比别人喂到嘴里能学得更多。</p>
+
+<p>你不应该觉得这样就被冒犯了，你要认为，回复者没有不理你就是在向你表示某种尊敬，你反而应该感谢他热切地想帮助你。</p>
+
+<h2>
+<a id="如果还不明白" class="anchor" href="#%E5%A6%82%E6%9E%9C%E8%BF%98%E4%B8%8D%E6%98%8E%E7%99%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>如果还不明白……</h2>
+
+<p>如果你看不懂回答，不要马上回复一个要求说明的消息，先试试那些最初提问时用过的相同工具（如置顶帖、百度。吧内搜索）试着搞懂回答。如果还是需要说明，展现你已经明白的。</p>
+
+<p>假如我告诉你：“如果你想要mod，你需要安装forge。”，接着是个不好的回帖：“什么是forge？”。而这是一个稍好些的跟帖：“是的，我查了百度，也大抵清楚了forge与mod之间的关系，然而我并不清楚如何安装forge以及安装forge后如何安装mod。”</p>
+
+<h1>
+<a id="提问禁忌" class="anchor" href="#%E6%8F%90%E9%97%AE%E7%A6%81%E5%BF%8C" aria-hidden="true"><span class="octicon octicon-link"></span></a>提问禁忌</h1>
+
+<p>最后的更新就到这里orz。</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Allen-Edelfelt/how-to-ask-questions-demo">How-to-ask-questions-demo</a> is maintained by <a href="https://github.com/Allen-Edelfelt">Allen-Edelfelt</a>.</span>
