--- a/index.html
+++ b/index.html
@@ -185,17 +185,17 @@
 
 <p><b>问</b>：
 <br>我在哪可以找到Minecraft 1.7.2版本的下载？
-<b>答</b>：
+<br><b>答</b>：
 <br>在我找到它的同样地方，在百度上——上帝啊，难道还有人不知道如何使用百度吗？</p>
 
 <p><b>问</b>：
 <br>如何配置我的Minecraft启动器？
-<b>答</b>：
+<br><b>答</b>：
 <br>如果你有足够的智慧提这个问题，你也该有足够的智慧去 “读一下该死的置顶帖”，然后自己去找出来。</p>
 
 <p><b>问</b>：
 <br>我的Minecraft无法运行辣！
-<b>答</b>：
+<br><b>答</b>：
 <br>这不是一个问题，我也没有兴趣去猜你有什么问题──我有更要紧的事要做。看到这种东西，我的反应一般如下：</p>
 
 <ul>
@@ -206,7 +206,7 @@
 
 <p><b>问</b>：
 <br>我该如何黑掉别人的服务器/盗取OP权限/偷窃别人的钻石？
-<b>答</b>：
+<br><b>答</b>：
 <br>想做这种事情说明你是个卑劣的家伙，想让我们教你做这种事情说明你是个白痴。</p>
 
 <h1>
@@ -215,7 +215,7 @@
 <p>最后，我将通过举例来演示提问的智慧。同样的问题两种提法，一种愚蠢，另一种明智。</p>
 
 <p><b>愚蠢</b>：
-<br>我在哪能找到关于Minecraft 1.7.10的信息？
+<br>我在哪能找到关于Minecraft 1.7.10的信息？</p>
 <b>明智</b>：
 <br>我用百度搜索过“Minecraft 1.7.10”，但没有找到什么有用的，有谁知道1.7版本与1.7.10的区别？</p>
 
